# openrc-manager

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
openrc_manager/: __init__.py  __main__.py  app.py  main.py  window.py
openrc_manager/backend/: __init__.py  distro_detect.py  log_reader.py  service_manager.py
openrc_manager/data/: openrc-manager.desktop  org.openrc.manager.policy  style.css
openrc_manager/widgets/: __init__.py  details_dialog.py  log_viewer.py  runlevel_dialog.py  service_row.py
packaging/alpine/: APKBUILD
packaging/arch/: PKGBUILD
packaging/debian/: control
packaging/gentoo/: openrc-manager.ebuild
packaging/rpm/: openrc-manager.spec
tests/: test_distro_detect.py  test_service_manager.py
