[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrc-manager"
version = "1.0.3"
description = "GTK4 graphical interface for managing OpenRC services"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
  { name = "Sarah", email = "saretta1986@preoton.me" }
]
keywords = ["openrc", "init", "service", "manager", "gtk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Systems Administration"
]
requires-python = ">=3.9"
dependencies = [
  "PyGObject>=3.42.0"
]

[project.urls]
Homepage = "https://github.com/sarahmeow86/openrc-manager"
Repository = "https://github.com/sarahmeow86/openrc-manager"
Issues = "https://github.com/sarahmeow86/openrc-manager/issues"

[project.scripts]
openrc-manager = "openrc_manager.__main__:main"

[project.gui-scripts]
openrc-manager-gui = "openrc_manager.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["openrc_manager*"]

[tool.setuptools.package-data]
openrc_manager = ["data/*.desktop", "data/*.svg", "data/*.policy", "data/*.css"]
